--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,8 +4,16 @@
         <servlet-name>AssuntoServlet</servlet-name>
         <servlet-class>freeforum.controler.AssuntoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AssuntoDetalheServlet</servlet-name>
+        <servlet-class>freeforum.controler.AssuntoDetalheServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AssuntoServlet</servlet-name>
+        <url-pattern>/assuntos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AssuntoDetalheServlet</servlet-name>
         <url-pattern>/assunto</url-pattern>
     </servlet-mapping>
     <session-config>
